sort.pancake.BubblePancake.scala.error
Erreur de compilation :
BubblePancake:7: error: value !=- is not a member of Int
    while (j!=-1 && plusGrand(j,j+1)){
            ^BubblePancake:23: error: reassignment to val
  if (i=1) {
       ^